# AudioStreamer

./: .gitignore
.github/workflows/: build.yml
android_app/: build.gradle  gradle.properties
android_app/app/: build.gradle
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/cpp/: CMakeLists.txt  opus_wrapper.cpp
android_app/app/src/main/java/com/timer/audiostreamer/: AudioCaptureService.kt  MainActivity.kt  PermissionActivity.kt
android_app/cmake/: BuildOpus.cmake
windows_app/: CMakeLists.txt
windows_app/src/: main.cpp
